# shokobot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DOCKER.md  Dockerfile  FEATURE_JSON_OUTPUT.md  LICENSE  Makefile  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  cli.py  debug_metadata_filtering.py  docker-compose.override.yml.example  docker-compose.yml  main_ingest.py  main_rag.py  mypy.ini  nginx.conf  pyproject.toml  setup.sh
.github/: MAKEFILE_MIGRATION.md  QUICKSTART.md  SETUP.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml  lint.yml  security.yml  test.yml
cli/: __init__.py  info.py  ingest.py  query.py  repl.py  web.py
debug/: README.md  debug_chromadb_config.py  debug_distance_metadata.py  debug_json_parser.py  debug_mcp_connection.py  debug_metadata_filtering.py  debug_retrieval.py  debug_title_extraction.py
docs/: APPCONTEXT_USAGE.md  APPCONTEXT_VALUE_ANALYSIS.md  ASYNC_OPPORTUNITIES_ANALYSIS.md  DEPENDENCY_INJECTION_ANALYSIS.md  MCP_INTEGRATION.md  MODULAR_CLI_ARCHITECTURE.md  README.md  SHOWDOC_JSON_EXAMPLE.md  TESTING_STRATEGY.md  USER_GUIDE.md
examples/: README.md  simple_similarity_scores.py  test_mcp_integration.py  test_table_similarity.py  view_similarity_scores.py
models/: show_doc.py
prompts/: README.md  __init__.py  anime_rag.py  title_extraction.py
resources/: config.json  shoko_db_extract.sql
services/: anidb_parser.py  app_context.py  config_service.py  context.py  ingest_service.py  mcp_anime_json_parser.py  mcp_client_service.py  rag_service.py  showdoc_persistence.py  vectorstore_service.py
tests/: conftest.py  test_distance_threshold_logic.py
tests/config/: test_config_service.py
tests/integration/: test_ingest_flow.py
tests/models/: test_show_doc.py
tests/prompts/: test_anime_rag.py  test_title_extraction.py
tests/resources/: 17920.json  19060.json  3507.json
tests/services/: test_anidb_parser.py  test_app_context.py  test_ingest_service.py  test_mcp_anime_json_parser.py  test_mcp_client_service.py  test_rag_service.py  test_showdoc_persistence.py  test_vectorstore_service.py
tests/ui/: test_app.py  test_components.py  test_utils.py
tests/utils/: test_batch_utils.py  test_similarity_utils.py  test_text_utils.py
ui/: __init__.py  app.py  components.py  utils.py
utils/: batch_utils.py  similarity_utils.py  text_utils.py
