[tool.poetry]
name = "shokobot"
version = "0.1.0"
description = "RAG-based anime recommendation system using LangChain and ChromaDB"
authors = ["James Conner"]
readme = "README.md"
license = "MIT"
packages = [{include = "services"}, {include = "models"}, {include = "utils"}]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^1.0.5"
langchain-community = "^0.4.1"
langchain-core = "^1.0.4"
langchain-openai = "^1.0.2"
langchain-text-splitters = "^1.0.0"
langchain-chroma = "^1.0"
langchainhub = "^0.1.21"
chromadb = "^1.3.4"
openai = "^2.7.1"
beautifulsoup4 = "^4.14.2"
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.2.0"
ruff = "^0.14.4"
mypy = "^1.18.2"
bandit = "^1.8.6"
pre-commit = "^4.4.0"

[tool.poetry.scripts]
shokobot-ingest = "main_ingest:main"
shokobot-rag = "main_rag:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["S101"]  # Allow assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_core.*",
    "langchain_openai.*",
    "langchain_chroma.*",
    "chromadb.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=services",
    "--cov=models",
    "--cov=utils",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["services", "models", "utils"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # Allow assert statements

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]
